# Wafer-cxx

./: .gitignore  CHANGES.txt  CMakeLists.txt  LICENSE.md  Makefile  Makefile.in  README.md  README.txt  cleandatafiles.sh  cluster.xyz  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  grid.cpp  initialconditions.cpp  intde2.cpp  mexHatPotential.cpp  modules  mpisolve  mpisolve.c  mpisolve.cpp  outputroutines.cpp  paramreader.cpp  params.txt  potential.cpp  qfdtd.job  random.cpp  run.sh  run_gdb.csh  wafer.cpp  wavefn.job  xy.csv
autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: grid.h  grid.hpp  initialconditions.h  initialconditions.hpp  intde2.h  intde2.hpp  mexHatPotential.h  mexHatPotential.hpp  mpisolve.h  outputroutines.h  outputroutines.hpp  paramreader.h  paramreader.hpp  potential.h  potential.hpp  random.h  random.hpp  wafer.hpp
m4/: ax_mpi.m4
scripts/: ExtractBE.py  ExtractRMS.py  PointRun.py  scalerun.sh
scripts/Jnana/: wfnToRaijin  wfnToTrifid
scripts/Raijin/: completeJob  spawnJob
scripts/Trifid/: completeJob  runJob
src/: Makefile  Makefile.am  Makefile.in  initialconditions.cpp  intde2.cpp  mexHatPotential.cpp  mexHatPotential.h  mpisolve.h  outputroutines.h  potential.cpp  potential.h  wafer
src/include/: mexHatPotential.h  paramreader.h
